--- a/009工时/login.html
+++ b/009工时/login.html
@@ -15,7 +15,9 @@
         <!-- 主体内容 -->
         <div class="row justify-content-center g-4">
             <!-- 左侧空列 -->
-            <div class="col-md-6"></div>
+            <div class="col-md-6">
+                <img src="img/1.JPG" alt="" style="width:1400px;height:1200px;">
+            </div>
 
             <!-- 登录表单 -->
             <div class="col-md-4">
